--- a/.github/workflows/001-docker-publish.yml
+++ b/.github/workflows/001-docker-publish.yml
@@ -1,4 +1,4 @@
-name: Push image🚀
+name: Build and push image📦🚀
 
 on:
   schedule:
@@ -42,6 +42,12 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract Docker metadata
         id: meta
