--- a/.github/workflows/001-docker-publish.yml
+++ b/.github/workflows/001-docker-publish.yml
@@ -26,14 +26,14 @@ jobs:
 
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@3.0.1
+        uses: sigstore/cosign-installer@v3.0.1
 
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@2.4.1
+        uses: docker/setup-buildx-action@v2.4.1
 
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@2.1.0
+        uses: docker/login-action@v2.1.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -47,13 +47,13 @@ jobs:
 
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@4.3.0
+        uses: docker/metadata-action@v4.3.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push the Docker image
         id: build-and-push
-        uses: docker/build-push-action@4.0.0
+        uses: docker/build-push-action@v4.0.0
         with:
           context: .
           platforms: linux/amd64
