--- a/.github/workflows/001-docker-publish.yml
+++ b/.github/workflows/001-docker-publish.yml
@@ -1,8 +1,8 @@
-name: Build and push image
+name: Build and push image📦
 
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '30 0 * * *'
   push:
     branches: [ "http3" ]
   pull_request:
