--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           cosign-release: 'v1.13.1'
 
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v.2.5.0
+        uses: docker/setup-buildx-action@v2.5.0
 
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
