--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ on:
     - cron: '30 0 * * *'
   push:
     branches: [ "http3" ]
-  pull_request:
-    branches: [ "http3" ]
+  # pull_request:
+  # branches: [ "http3" ]
 
 env:
   REGISTRY: ghcr.io
@@ -14,6 +14,7 @@ env:
 
 jobs:
   build:
+    if: github.actor == 'ammnt'
     runs-on: ubuntu-latest
     permissions:
       contents: read
