--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,15 +75,13 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         env:
           COSIGN_EXPERIMENTAL: "true"
-          COSIGN_PASSWORD: "${COSIGN_PASSWORD}"
+          COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
         run: |
           cosign sign --key cosign.key \
             -a "repo=${{ github.repository }}" \
-            -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
             ghcr.io/ammnt/nginx:http3
           cosign sign --key cosign.key \
             -a "repo=${{ github.repository }}" \
-            -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
             ammnt/nginx:http3
