--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,4 +76,4 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
-        run: cosign sign --key cosign.key -a "repo=${{ github.repository }}" -a "ref=${{ github.sha }}" ${{ env.REGISTRY }}/${{ github.actor }}/nginx:http3@${{ steps.build-and-push.outputs.digest }}
+        run: cosign sign -y --key cosign.key -a "repo=${{ github.repository }}" -a "ref=${{ github.sha }}" ${{ env.REGISTRY }}/${{ github.actor }}/nginx:http3@${{ steps.build-and-push.outputs.digest }}
