--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,8 +72,19 @@ jobs:
         run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
 
       - name: Sign the published Docker image
+        needs: build-and-push
         if: ${{ github.event_name != 'pull_request' }}
         env:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
-        run: cosign sign -y --key cosign.key -a "repo=${{ github.repository }}" -a "ref=${{ github.sha }}" ${{ env.REGISTRY }}/${{ github.actor }}/nginx:http3@${{ steps.build-and-push.outputs.digest }}
+        run: |
+          cosign sign -y --key cosign.key \
+            -a "repo=${{ github.repository }}" \
+            -a "workflow=${{ github.workflow }}" \
+            -a "ref=${{ github.sha }}" \
+            ghcr.io/ammnt/nginx:http3
+          cosign sign -y --key cosign.key \
+            -a "repo=${{ github.repository }}" \
+            -a "workflow=${{ github.workflow }}" \
+            -a "ref=${{ github.sha }}" \
+            ammnt/nginx:http3
