--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,9 +81,9 @@ jobs:
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
-            ghcr.io/ammnt/nginx:http3
+            ghcr.io/ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
           cosign sign -y --key cosign.key \
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
-            ammnt/nginx:http3
+            ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
