--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,6 @@ on:
     - cron: "30 0 * * *"
   push:
     branches: ["http3"]
-  # pull_request:
-  # branches: [ "http3" ]
 
 env:
   REGISTRY: ghcr.io
@@ -23,11 +21,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2.7.0
 
       - name: Install cosign
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3.0.1
+        with:
+          cosign-release: "v1.13.1"
 
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2.5.0
@@ -67,22 +67,17 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - uses: sigstore/cosign-installer@v3.0.1
-      - name: Write signing key to disk
-        run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
-
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
           COSIGN_EXPERIMENTAL: "true"
-          COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
         run: |
-          cosign sign -y --key cosign.key \
+          cosign sign -y \
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
             ghcr.io/ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
-          cosign sign -y --key cosign.key \
+          cosign sign -y \
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
