--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,3 +82,15 @@ jobs:
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
             ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
+
+      - name: Run deploy on server
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            cd /home/${{ secrets.SERVER_USERNAME }}/agh_env
+            docker-compose -f docker-compose.yaml pull nginx
+            docker-compose -f docker-compose.yaml up -d nginx
