--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,14 +83,13 @@ jobs:
             -a "ref=${{ github.sha }}" \
             ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
 
-      - name: Run update on the server
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_KEY }}
-          port: ${{ secrets.SERVER_PORT }}
-          script: |
-            cd /home/${{ secrets.SERVER_USERNAME }}/agh_env
-            docker-compose -f docker-compose.yaml pull nginx
-            docker-compose -f docker-compose.yaml up -d nginx
+      # - name: Run update on the server
+      #  uses: appleboy/ssh-action@v0.1.10
+      #  with:
+      #    host: ${{ secrets.SERVER_HOST }}
+      #    username: ${{ secrets.SERVER_USERNAME }}
+      #    key: ${{ secrets.SERVER_KEY }}
+      #    port: ${{ secrets.SERVER_PORT }}
+      #    script: |
+      #      docker-compose -f /home/${{ secrets.SERVER_USERNAME }}/conf/docker-compose.yaml pull nginx
+      #      docker-compose -f /home/${{ secrets.SERVER_USERNAME }}/conf/docker-compose.yaml up -d nginx
