--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and push image📦
 
 on:
   schedule:
-    - cron: "30 0 * * 6"
+    - cron: "30 0 * * *"
   push:
     branches: ["http3"]
 
