--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and push image📦
 
 on:
   schedule:
-    - cron: "30 0 * * *"
+  - cron: "30 0 * * *"
   push:
     branches: ["http3"]
 
@@ -20,74 +20,79 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3.5.2
+    - name: Checkout repository
+      uses: actions/checkout@v3.5.2
 
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3.0.2
+    - name: Install cosign
+      if: github.event_name != 'pull_request'
+      uses: sigstore/cosign-installer@v3.0.2
 
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v2.5.0
+    - name: Setup Docker buildx
+      uses: docker/setup-buildx-action@v2.5.0
 
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Log into registry ${{ env.REGISTRY }}
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Log into Docker Hub
-        uses: docker/login-action@v2.1.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Log into Docker Hub
+      uses: docker/login-action@v2.1.0
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v4.3.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    - name: Extract Docker metadata
+      id: meta
+      uses: docker/metadata-action@v4.3.0
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@v4.0.0
-        with:
-          provenance: false
-          context: .
-          platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            ${{ steps.meta.outputs.tags }}
-            ammnt/nginx:http3
-          labels: ${{ steps.meta.outputs.labels }}
-          # cache-from: type=gha
-          # cache-to: type=gha,mode=max
+    - name: Build and export the image
+      id: build-and-push
+      uses: docker/build-push-action@v4.0.0
+      with:
+        provenance: false
+        context: .
+        platforms: linux/amd64
+        tags: |
+          ${{ steps.meta.outputs.tags }}
+          ammnt/nginx:http3
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        run: |
-          cosign sign -y \
-            -a "repo=${{ github.repository }}" \
-            -a "workflow=${{ github.workflow }}" \
-            -a "ref=${{ github.sha }}" \
-            ghcr.io/ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
-          cosign sign -y \
-            -a "repo=${{ github.repository }}" \
-            -a "workflow=${{ github.workflow }}" \
-            -a "ref=${{ github.sha }}" \
-            ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
+    - name: Test of the image
+      run: |
+        docker run --rm ammnt/nginx:http3 -p 127.0.0.1:8080:8080
+        curl -vki http://127.0.0.1:8080 || exit 1
 
-      # - name: Run update on the server
-      #  uses: appleboy/ssh-action@v0.1.10
-      #  with:
-      #    host: ${{ secrets.SERVER_HOST }}
-      #    username: ${{ secrets.SERVER_USERNAME }}
-      #    key: ${{ secrets.SERVER_KEY }}
-      #    port: ${{ secrets.SERVER_PORT }}
-      #    script: |
-      #      docker-compose -f /home/${{ secrets.SERVER_USERNAME }}/conf/docker-compose.yaml pull nginx
-      #      docker-compose -f /home/${{ secrets.SERVER_USERNAME }}/conf/docker-compose.yaml up -d nginx
+    - name: Build and push Docker image
+      id: build-and-push
+      uses: docker/build-push-action@v4.0.0
+      with:
+        provenance: false
+        context: .
+        platforms: linux/amd64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ${{ steps.meta.outputs.tags }}
+          ammnt/nginx:http3
+
+    - name: Sign the published Docker image
+      if: ${{ github.event_name != 'pull_request' }}
+      env:
+        COSIGN_EXPERIMENTAL: "true"
+      run: |
+        cosign sign -y \
+          -a "repo=${{ github.repository }}" \
+          -a "workflow=${{ github.workflow }}" \
+          -a "ref=${{ github.sha }}" \
+          ghcr.io/ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
+        cosign sign -y \
+          -a "repo=${{ github.repository }}" \
+          -a "workflow=${{ github.workflow }}" \
+          -a "ref=${{ github.sha }}" \
+          ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
