--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,26 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
     - name: Build and push Docker image
-      id: build-and-push
+      uses: docker/build-push-action@v4.0.0
+      with:
+        provenance: false
+        context: .
+        platforms: linux/amd64
+        load: true
+        # push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ${{ steps.meta.outputs.tags }}
+          ammnt/nginx:http3
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    - name: Test
+      run: |
+        docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
+        curl -vki http://127.0.0.1:8080
+
+    - name: Build and push Docker image
       uses: docker/build-push-action@v4.0.0
       with:
         provenance: false
