--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@v2.5.0
 
-    - name: Log into registry ${{ env.REGISTRY }}
+    - name: Log into GHCR ${{ env.REGISTRY }}
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v2.1.0
       with:
@@ -51,26 +51,7 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4.0.0
-      with:
-        provenance: false
-        context: .
-        platforms: linux/amd64
-        load: true
-        # push: ${{ github.event_name != 'pull_request' }}
-        tags: |
-          ${{ steps.meta.outputs.tags }}
-          ammnt/nginx:http3
-        labels: ${{ steps.meta.outputs.labels }}
-        # cache-from: type=gha
-        # cache-to: type=gha,mode=max
-
-    - name: Test
-      run: |
-        docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
-        curl -vki http://127.0.0.1:8080
-
-    - name: Build and push Docker image
+      id: build-and-push
       uses: docker/build-push-action@v4.0.0
       with:
         provenance: false
@@ -83,6 +64,11 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
+    - name: Test the Docker image
+      run: |
+        docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
+        curl -vki http://127.0.0.1:8080
 
     - name: Sign the published Docker image
       if: ${{ github.event_name != 'pull_request' }}
