--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@v2.5.0
 
-    - name: Log into GHCR ${{ env.REGISTRY }}
+    - name: Log into ${{ env.REGISTRY }}
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v2.1.0
       with:
@@ -51,6 +51,7 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
     - name: Build the Docker image
+      id: build
       uses: docker/build-push-action@v4.0.0
       with:
         provenance: false
@@ -70,7 +71,7 @@ jobs:
         curl -vki http://127.0.0.1:8080
 
     - name: Push the Docker image
-      id: build-and-push
+      id: push
       uses: docker/build-push-action@v4.0.0
       with:
         provenance: false
@@ -93,9 +94,9 @@ jobs:
           -a "repo=${{ github.repository }}" \
           -a "workflow=${{ github.workflow }}" \
           -a "ref=${{ github.sha }}" \
-          ghcr.io/ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
+          ghcr.io/ammnt/nginx:@${{ steps.push.outputs.digest }}
         cosign sign -y \
           -a "repo=${{ github.repository }}" \
           -a "workflow=${{ github.workflow }}" \
           -a "ref=${{ github.sha }}" \
-          ammnt/nginx:@${{ steps.build-and-push.outputs.digest }}
+          ammnt/nginx:@${{ steps.push.outputs.digest }}
