--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,13 +102,13 @@ jobs:
           -a "ref=${{ github.sha }}" \
           ammnt/nginx:@${{ steps.push.outputs.digest }}
 
-      #- name: Run deploy update on the server
-      #  uses: appleboy/ssh-action@v0.1.10
-      #  with:
-      #    host: ${{ secrets.SERVER_HOST }}
-      #    username: ${{ secrets.SERVER_USERNAME }}
-      #    key: ${{ secrets.SERVER_KEY }}
-      #    port: ${{ secrets.SERVER_PORT }}
-      #    script: |
-      #      docker-compose pull web
-      #      docker-compose up -d web
+    - name: Run deploy update on the server
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_KEY }}
+        port: ${{ secrets.SERVER_PORT }}
+        script: |
+          docker-compose pull nginx
+          docker-compose up -d nginx
