fixed: deploy update via ssh

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,5 +110,6 @@ jobs:
         key: ${{ secrets.SERVER_KEY }}
         port: ${{ secrets.SERVER_PORT }}
         script: |
+          cd ~/home/${{ secrets.SERVER_USERNAME }}/agh
           docker-compose pull nginx
           docker-compose up -d nginx
