--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Build and push image📦
 
 on:
   workflow_dispatch:
-  # schedule:
-  # - cron: "30 0 * * *"
-  # push:
-  #  branches: ["http3"]
+  schedule:
+    - cron: "00 20 * * SAT"
+  push:
+    branches: ["http3"]
 
 env:
   REGISTRY: ghcr.io
