--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
     - cron: "00 17 * * SAT"
   push:
     branches: ["http3"]
+  # pull_request:
+  #   branches: [ "http3" ]
 
 env:
   REGISTRY: ghcr.io
