added: slim the docker image to the actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,10 +97,9 @@ jobs:
           docker run -idt -p 127.0.0.1:8080:8080/tcp ammnt/nginx:http3
           curl -i http://127.0.0.1:8080 || exit 1
 
-      - name: Push the Docker image
+      - name: Push the Docker images
         run: |
           docker image push ammnt/nginx:http3
-          docker image push ammnt/nginx:@${{ steps.push.outputs.digest }}
 
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
