added: slim the docker image to the actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,4 +115,4 @@ jobs:
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
-            ammnt/nginx:@http3
+            ammnt/nginx:http3
